# OpenMandelbrot

./: .gitignore  CMakeLists.txt  Fractal.cpp  Fractal.hpp  Functions.hpp  README.md  functions.hpp  main.cpp
